
add_executable(TreibersStack TreibersStack.cpp)
target_link_libraries(TreibersStack TMRexpLib)

# add_test(TreibersStack_03--GC--ages    	TreibersStack --GC --ages --hwcas --malloc --success)
# add_test(TreibersStack_07--GC--no-ages 	TreibersStack --GC --no-ages --hwcas --malloc --success)
# add_test(TreibersStack_11--PRF--ages   	TreibersStack --PRF --ages --hwcas --malloc --success)
# add_test(TreibersStack_15--PRF--no-ages	TreibersStack --PRF --no-ages --hwcas --malloc --fail)
# add_test(TreibersStack_19--MM--ages    	TreibersStack --MM --ages --ccas --init --success)
# add_test(TreibersStack_23--MM--no-ages 	TreibersStack --MM --no-ages --hwcas --malloc --fail)

# add_test(TreibersStack_01--GC--ages--ccas--malloc--success    	TreibersStack --GC --ages --ccas --malloc --success)
# add_test(TreibersStack_02--GC--ages--ccas--init--success      	TreibersStack --GC --ages --ccas --init --success)
# add_test(TreibersStack_03--GC--ages--hwcas--malloc--success   	TreibersStack --GC --ages --hwcas --malloc --success)
# add_test(TreibersStack_04--GC--ages--hwcas--init--success     	TreibersStack --GC --ages --hwcas --init --success)
# add_test(TreibersStack_05--GC--no-ages--ccas--malloc--success 	TreibersStack --GC --no-ages --ccas --malloc --success)
# add_test(TreibersStack_06--GC--no-ages--ccas--init--success   	TreibersStack --GC --no-ages --ccas --init --success)
# add_test(TreibersStack_07--GC--no-ages--hwcas--malloc--success	TreibersStack --GC --no-ages --hwcas --malloc --success)
# add_test(TreibersStack_08--GC--no-ages--hwcas--init--success  	TreibersStack --GC --no-ages --hwcas --init --success)

# add_test(TreibersStack_09--PRF--ages--ccas--malloc--success   	TreibersStack --PRF --ages --ccas --malloc --success)
# add_test(TreibersStack_10--PRF--ages--ccas--init--success     	TreibersStack --PRF --ages --ccas --init --success)
# add_test(TreibersStack_11--PRF--ages--hwcas--malloc--success  	TreibersStack --PRF --ages --hwcas --malloc --success)
# add_test(TreibersStack_12--PRF--ages--hwcas--init--success    	TreibersStack --PRF --ages --hwcas --init --success)
# add_test(TreibersStack_13--PRF--no-ages--ccas--malloc--success	TreibersStack --PRF --no-ages --ccas --malloc --success)
# add_test(TreibersStack_14--PRF--no-ages--ccas--init--success  	TreibersStack --PRF --no-ages --ccas --init --success)
# add_test(TreibersStack_15--PRF--no-ages--hwcas--malloc--fail  	TreibersStack --PRF --no-ages --hwcas --malloc --fail)
# add_test(TreibersStack_16--PRF--no-ages--hwcas--init--fail    	TreibersStack --PRF --no-ages --hwcas --init --fail)

# add_test(TreibersStack_17--MM--ages--ccas--malloc--success   	TreibersStack --MM --ages --ccas --malloc --success)
# add_test(TreibersStack_18--MM--ages--ccas--init--success     	TreibersStack --MM --ages --ccas --init --success)
# add_test(TreibersStack_19--MM--ages--hwcas--malloc--success  	TreibersStack --MM --ages --hwcas --malloc --success)
# add_test(TreibersStack_20--MM--ages--hwcas--init--success    	TreibersStack --MM --ages --hwcas --init --success)
# add_test(TreibersStack_21--MM--no-ages--ccas--malloc--success	TreibersStack --MM --no-ages --ccas --malloc --success)
# add_test(TreibersStack_22--MM--no-ages--ccas--init--success  	TreibersStack --MM --no-ages --ccas --init --success)
# add_test(TreibersStack_23--MM--no-ages--hwcas--malloc--fail  	TreibersStack --MM --no-ages --hwcas --malloc --fail)
# add_test(TreibersStack_24--MM--no-ages--hwcas--init--fail    	TreibersStack --MM --no-ages --hwcas --init --fail)